THRIFT-5179: Fix generated code for struct's named "a" or "b"

Client: cpp